--- a/style.css
+++ b/style.css
@@ -19,3 +19,12 @@
 {
     font-size: 22px;
 }
+
+#footer
+{
+    background-color: grey;
+    color: white;
+    width: 100%;
+    line-height: 25px;
+    margin-bottom: 0px;
+}
